--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,79 @@ packages/**
 *.user
 *.user.*
 **/CobaltCore.dll
+/bin/Debug/net8.0/0Harmony.dll
+/bin/Debug/net8.0/DemoMod.deps.json
+/bin/Debug/net8.0/DemoMod.dll
+/bin/Debug/net8.0/Mono.Cecil.dll
+/bin/Debug/net8.0/Mono.Cecil.Mdb.dll
+/bin/Debug/net8.0/Mono.Cecil.Pdb.dll
+/bin/Debug/net8.0/Mono.Cecil.Rocks.dll
+/bin/Debug/net8.0/MonoGame.Framework.dll
+/bin/Debug/net8.0/MonoMod.Common.dll
+/bin/Debug/net8.0/runtimes/linux-x64/native/libopenal.so.1
+/bin/Debug/net8.0/runtimes/linux-x64/native/libSDL2-2.0.so.0
+/bin/Debug/net8.0/runtimes/osx/native/libopenal.1.dylib
+/bin/Debug/net8.0/runtimes/osx/native/libSDL2.dylib
+/bin/Debug/net8.0/runtimes/win-x64/native/SDL2.dll
+/bin/Debug/net8.0/runtimes/win-x64/native/soft_oal.dll
+/bin/Debug/net8.0/runtimes/win-x86/native/SDL2.dll
+/bin/Debug/net8.0/runtimes/win-x86/native/soft_oal.dll
+/bin/Debug/net8.0/TeamSnakemouth.deps.json
+/bin/Debug/net8.0/TeamSnakemouth.dll
+/bin/Release/net8.0/0Harmony.dll
+/bin/Release/net8.0/Mono.Cecil.dll
+/bin/Release/net8.0/Mono.Cecil.Mdb.dll
+/bin/Release/net8.0/Mono.Cecil.Pdb.dll
+/bin/Release/net8.0/Mono.Cecil.Rocks.dll
+/bin/Release/net8.0/MonoGame.Framework.dll
+/bin/Release/net8.0/MonoMod.Common.dll
+/bin/Release/net8.0/runtimes/linux-x64/native/libopenal.so.1
+/bin/Release/net8.0/runtimes/linux-x64/native/libSDL2-2.0.so.0
+/bin/Release/net8.0/runtimes/osx/native/libopenal.1.dylib
+/bin/Release/net8.0/runtimes/osx/native/libSDL2.dylib
+/bin/Release/net8.0/runtimes/win-x64/native/SDL2.dll
+/bin/Release/net8.0/runtimes/win-x64/native/soft_oal.dll
+/bin/Release/net8.0/runtimes/win-x86/native/SDL2.dll
+/bin/Release/net8.0/runtimes/win-x86/native/soft_oal.dll
+/bin/Release/net8.0/TeamSnakemouth.deps.json
+/bin/Release/net8.0/TeamSnakemouth.dll
+/obj/Debug/net8.0/.NETCoreApp,Version=v8.0.AssemblyAttributes.cs
+/obj/Debug/net8.0/DemoMod.AssemblyInfo.cs
+/obj/Debug/net8.0/DemoMod.AssemblyInfoInputs.cache
+/obj/Debug/net8.0/DemoMod.assets.cache
+/obj/Debug/net8.0/DemoMod.csproj.AssemblyReference.cache
+/obj/Debug/net8.0/DemoMod.csproj.CopyComplete
+/obj/Debug/net8.0/DemoMod.csproj.CoreCompileInputs.cache
+/obj/Debug/net8.0/DemoMod.csproj.FileListAbsolute.txt
+/obj/Debug/net8.0/DemoMod.dll
+/obj/Debug/net8.0/DemoMod.GeneratedMSBuildEditorConfig.editorconfig
+/obj/Debug/net8.0/TeamSnakemouth.AssemblyInfo.cs
+/obj/Debug/net8.0/TeamSnakemouth.AssemblyInfoInputs.cache
+/obj/Debug/net8.0/TeamSnakemouth.assets.cache
+/obj/Debug/net8.0/TeamSnakemouth.csproj.AssemblyReference.cache
+/obj/Debug/net8.0/TeamSnakemouth.csproj.BuildWithSkipAnalyzers
+/obj/Debug/net8.0/TeamSnakemouth.csproj.CopyComplete
+/obj/Debug/net8.0/TeamSnakemouth.csproj.CoreCompileInputs.cache
+/obj/Debug/net8.0/TeamSnakemouth.csproj.FileListAbsolute.txt
+/obj/Debug/net8.0/TeamSnakemouth.dll
+/obj/Debug/net8.0/TeamSnakemouth.GeneratedMSBuildEditorConfig.editorconfig
+/obj/DemoMod.csproj.nuget.dgspec.json
+/obj/DemoMod.csproj.nuget.g.props
+/obj/DemoMod.csproj.nuget.g.targets
+/obj/project.assets.json
+/obj/project.nuget.cache
+/obj/Release/net8.0/.NETCoreApp,Version=v8.0.AssemblyAttributes.cs
+/obj/Release/net8.0/TeamSnakemouth.AssemblyInfo.cs
+/obj/Release/net8.0/TeamSnakemouth.AssemblyInfoInputs.cache
+/obj/Release/net8.0/TeamSnakemouth.assets.cache
+/obj/Release/net8.0/TeamSnakemouth.csproj.AssemblyReference.cache
+/obj/Release/net8.0/TeamSnakemouth.csproj.BuildWithSkipAnalyzers
+/obj/Release/net8.0/TeamSnakemouth.csproj.CopyComplete
+/obj/Release/net8.0/TeamSnakemouth.csproj.CoreCompileInputs.cache
+/obj/Release/net8.0/TeamSnakemouth.csproj.FileListAbsolute.txt
+/obj/Release/net8.0/TeamSnakemouth.dll
+/obj/Release/net8.0/TeamSnakemouth.GeneratedMSBuildEditorConfig.editorconfig
+/obj/Release/net8.0/TeamSnakemouth.sourcelink.json
+/obj/TeamSnakemouth.csproj.nuget.dgspec.json
+/obj/TeamSnakemouth.csproj.nuget.g.props
+/obj/TeamSnakemouth.csproj.nuget.g.targets
